@@ -1,6 +1,12 @@
 Pending changes in the mainline
 ===============================
 
+
+REST API
+--------
+
+* New URI: "/studies/.../split" to split a study
+
 Maintenance
 -----------
 
